--- a/scrapbox/templates/createitem.html
+++ b/scrapbox/templates/createitem.html
@@ -11,10 +11,17 @@
     <nav class="navbar bg-dark  border-body text-light" data-bs-theme="dark">
         <p><h1>Driven Innovations</h1></p>
     </nav>
-    <form action="" method="post">
-        {%csrf_token%}
-       
-        {{form}}
-    </form>
+    <div class="container">
+        <div class="row">
+            <div class="col-l-8">
+                <form action="" method="post">
+                    {%csrf_token%}
+                   
+                    {{form}}
+                </form>
+            </div>
+        </div>
+        
+    </div>
 </body>
 </html>
