--- a/scrapbox/templates/profile_details.html
+++ b/scrapbox/templates/profile_details.html
@@ -8,15 +8,34 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{%static 'social/css/profile.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
+
 </head>
 <body>
-    <h2>Detailed view</h2>
-    <form action="" method="post">
-        {%csrf_token%}
-        {{data.user}}
-        {{data.email}}
-        
+    
+    <div class="container d-flex justify-content-center">
+        <form action="" method="post">
+            {%csrf_token%}
 
-    </form>
+            <div class="col-lg-6">
+                {%if data.profile_pic%}
+                    <img src="{{data.profile_pic.url}}"alt="">
+                {%else%}
+                    <img src="{%static 'social/images/profilepic.png' %}" title="" alt="">
+                {%endif%}
+            </div>
+            <div class="col-lg-6 ms-5 mt-5">
+                
+                
+                <span><i class="fa-solid fa-user p-3"></i>  {{data.user}}  </span>
+                <span><i class="fa-solid fa-user p-3"></i>  {{data.email}}  </span>
+                
+            </div>
+            
+            
+            
+    
+        </form>
+    </div>
 </body>
 </html>
