--- a/scrapbox/templates/index.html
+++ b/scrapbox/templates/index.html
@@ -14,96 +14,140 @@
 <body>
   <nav class="navbar bg-dark  border-body text-light" data-bs-theme="dark">
   
-        <p><h1>Driven Innovations</h1></p>
-      
-      
-  </nav>
-    <nav class="navbar bg-success p-2 text-dark bg-opacity-25 border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+    <p><h1>Driven Innovations</h1></p>
   
-    <div class="col-l-8 d-flex justify-content-center">
-              <h4>Hai {{request.user}}, Welcome....</h4>
+  
+</nav>
+<nav class="navbar bg-success p-2 text-dark bg-opacity-25 border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+
+        <div class="col-l-8 d-flex justify-content-center">
+                  <h4>  WELCOME..... {{request.user}}</h4>
+        </div>
+        <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+
+          <div class="dropdown">
+              <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                 Buy
+              </button>
+              <ul class="dropdown-menu">
+                <li>
+                  <div class=" mt-3 ">
+                    <a href="{%url 'list-all' %}">View Available Items</a> 
+                  </div>
+                </li>
+                  
+              </ul>
+          </div>
+
+          <div class="dropdown">
+            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                Sell
+            </button>
+            <ul class="dropdown-menu">
+
+              <li>
+                <div class="mt-3 "><a href="{%url 'scrap-create'%}" >Create New Item</a> </div>
+       
+            </ul>
+          </div>
+
+          <div class="col-l-6">
+             <div>
+                   <a href="{%url 'profiledetail_view' request.user.profile.id  %}"><button class="btn btn-secondary"><i class="fa-solid fa-user"></i></button></a>
+                   <a href="{%url 'cart-view'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
+
+              </div>
+
+              <div class="col-l-6">
+                <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
+
+              </div>
+
+        </div>   
+</nav> 
+
+<div class="container  justify-content-center">
+  <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="{%static 'images/login3.jpg'%}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>First slide label</h5>
+              <p>Some representative placeholder content for the first slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="{%static 'images/login4.jpg'%}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Second slide label</h5>
+              <p>Some representative placeholder content for the second slide.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="{%static 'images/login5.jpg'%}" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Third slide label</h5>
+              <p>Some representative placeholder content for the third slide.</p>
+            </div>
+          </div>
+        </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
+</div>
+
+<div class="container d-flex justify-content-center mt-5 mb-5">
+
+  <div class="card" style="width: 25rem;"> 
+    <div class="card-body">
+      <h5 class="card-title">About us</h5>
+      <p class="card-text">
+        Since foraying into Kerala’s pre-owned car market in 2011, Driven Innovations channel for pre-owned cars, has grown in both size and stature. With 17 outlets spread across 14 cities, the new Driven Innovations Value caters to the diverse and burgeoning needs of pre-owned car buyers across the country.
+      </p>
     </div>
-
-     <div class="col-l-8">
-      <div class="btn-group d-flex justify-content-start border border-dark">
-        
-        <button type="button" class="btn btn-secondary">Menu</button>
-        <button type="button" class="btn btn-secondary dropdown-toggle dropdown-toggle-split" data-bs-toggle="dropdown" aria-expanded="false">
-          <span class="visually-hidden">Toggle Dropdown</span>
-        </button>
-        <ul class="dropdown-menu">
-          <li>
-            <div class=" mt-3 ">
-              
-              <a href="{%url 'profiledetail_view' request.user.profile.id  %}"><button class="btn btn-secondary">View Profile</button></a>
-      
-            </div>
-          </li>
-          <li>
-
-          </li>
-          <li>
-            <div class=" mt-3 ">
-              <a href="{%url 'list-all' %}"><button class="btn btn-secondary">Go to All List</button></a> 
-            </div>
-          </li>
-
-          <li>
-            <div class="mt-3 "><a href="{%url 'scrap-create'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light">Create New</a> </div>
-
-          </li>
-
-          <li>
-            <div class="mt-3 "><a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light">My cart</a> </div>
-
-          </li>
-          <li>
-            <div class="mt-3 "><a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light">Logout </a> </div>
-
-          </li>
-          
-        </ul>
-      </div>
-     </div>
-      
-  </nav>
-
-  <div class="container d-flex justify-content-center">
-    <div class="card mb-3">
-      <img src="{%static 'images/login3.jpg'%}" class="card-img-top" alt="..."  width="40" height="300">
-      <div class="card-body">
-        <h5 class="card-title">Driven Innovations</h5>
-        <p class="card-text">
-          Driven Inoovations Group is a Kerala-domiciled online market place headquartered in Kotayam,kerala,India since 2009. The consumer brand originated as OnLine exchange.
-          Driven Innovations Group is owned by AGM group of companies.
-        </p>
-        <p class="card-text">
-          <style>
-              
-            ul.no-bullets {
-                list-style-type: none;
-                margin: 0;
-                padding: 0;
-            }
-
-
-          </style>
-          <ul class="no-bullets">
-            <li><i class="fa-solid fa-location-dot ms-2 p-2"></i><a href="">https://www.google.com/maps/search/?api=1&query=centurylink+field</a></li>
-            <li><i class="fa-solid fa-envelope ms-2 p-2"></i>driveninnovations@hotmail.com</li>
-            <li><i class="fa-solid fa-phone ms-2 p-2"></i>0481-2340117, +919495451658</li>
+  </div>
+  <div class="card ms-5" style="width: 35rem;">
+    <div class="card-body">
+      <h5 class="card-title">Contat us</h5>
+      <p class="card-text">Address(Main branch): 1st Floor, Ansari Complex, West temple street, Sreenagar Colony, Karappuzha, Kottayam, Kerala 686016</p>
+      <style>
             
-          </ul>
-        </p>
-      </div>
+        ul.no-bullets {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+
+      </style>
+      <ul class="no-bullets">
+        <li><i class="fa-solid fa-envelope ms-2 p-2"></i>driveninnovations@hotmail.com</li>
+        <li><i class="fa-solid fa-phone ms-2 p-2"></i>0481-2340117, +919495451658</li>
+        <li><i class="fa-solid fa-location-dot ms-2 p-2"></i><a href="">https://www.google.com/maps/search/?api=1&query=centurylink+field</a></li>
+
+        
+      </ul>
     </div>
-
   </div>
 
-  <div class="card-footer text-body-secondary d-flex justify-content-center" >
-    <i class="fa-brands fa-facebook ms-1 "></i>
-    <i class="fa-brands fa-instagram ms-1"></i>
-    <i class="fa-brands fa-youtube ms-1 "></i>
-  </div>
+</div>
+<div class="card-footer text-body-secondary bg-success p-2 text-dark bg-opacity-25 mb-2 p-2 col-12 text-center">
+  <i class="fa-brands fa-facebook"></i>
+  <i class="fa-brands fa-instagram"></i>
+  <i class="fa-brands fa-youtube"></i>
+
+</div>
+
+   
 </body>
 </html>
