--- a/scrapbox/templates/scrapboxitem_view.html
+++ b/scrapbox/templates/scrapboxitem_view.html
@@ -1,33 +1,49 @@
 <!DOCTYPE html>
+{%load static%}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{%static 'css/detailsbyid.css' %}">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="body">
+  <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+    <div class="col-l-8  text-light  justify-content-center">
+        <h4>  WELCOME..... {{request.user}}</h4>
+     </div>
+      <div class="d-flex justify-content-end">
+            <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
+
+      </div>   
+  </nav> 
 
     <div class="container d-flex justify-content-center mt-5">
 
-        <div class="card" style="width: 18rem;">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">{{data.name}}</h5>
+        <div class="card" style="width: 28rem; height: auto;">
+              {%if data.picture%}
+                  <img src="{{data.picture.url}}">
+              {%endif%}
+            <!-- <img src="..." class="card-img-top" alt="..."> -->
+            
+              <h5 class="title card-title">{{data.name}}</h5>
               
             <ul class="list-group list-group-flush">
               <li class="list-group-item">{{data.price}}</li>
               <li class="list-group-item">{{data.category}}</li>
               <li class="list-group-item">{{data.location}}</li>
               <li class="list-group-item">{{data.phone_no}}</li>
+              <li class="list-group-item">{{data.description}}</li>
               
             </ul>
             <div class="card-body">
+              <a href="{%url 'scrap-update' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>
+
               <a href="#" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
-              
-            </div>
+            
           </div>
         
         
