--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -9,17 +9,18 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="{%static 'css/liststyle.css' %}">
 </head>
-<body style="background-color: white;">
+<body style="background-color: black;">
     
     <div class="container">
-        <h3 class="mt-2 text-center">Items available  for sale</h3>
+        <h3 class="mt-2 text-center text-light">Items available  for sale</h3>
         <table class=" mt-4 table table-success border border-dark">
             <tr>
                 <th>Name</th>
                 <th>Category</th>
                 <th>Price</th>
                 <th>Location</th>
-                <th>Details</th>
+                <th>Contact</th>
+                <th>Remarks</th>
             </tr>
             {%for d in data%}
             <tr>
@@ -27,8 +28,10 @@
                 <td>{{d.category}}</td>
                 <td>{{d.price}}</td>
                 <td>{{d.location}}</td>
+                <td>{{d.phone_no}}</td>
                 <td>
                     <a href="{%url 'itemview' d.id %}"><button class="btn btn-secondary">View</button></a>
+
                     
                 </td>
                 
