--- a/scrapbox/templates/scrapupdate.html
+++ b/scrapbox/templates/scrapupdate.html
@@ -5,13 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{%static 'css/updatescrap.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{%static 'social/css/profile.css' %}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
-
 </head>
-<body>
+<body class="body">
     <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
         <div class="col-l-8  text-light  justify-content-center">
             <h4>  WELCOME..... {{request.user}}</h4>
@@ -21,26 +20,17 @@
 
         </div>   
     </nav> 
-    
-    <div class="container d-flex justify-content-center">
-        <form action="" method="post" enctype="multipart/form-data">
-            {%csrf_token%}
-
-            <div class="col-lg-6">
-                {%if data.profile_pic%}
-                    <img src="{{data.profile_pic.url}}"alt="">
-                {%else%}
-                    <img src="{%static 'social/images/profilepic.png' %}" title="" alt="">
-                {%endif%}
-            </div>
-            <div class="col-lg-6 ms-5 mt-5">
-
-                <span><i class="fa-solid fa-user p-5"></i>  {{data.user}}  </span>
-                <span><i class="fa-solid fa-email p-5"></i>  {{data.email}}  </span>
-                
-            </div>
-
-        </form>
+    <div class="container mt-5">
+        <div class="card" style="width: 38rem; height: auto;">
+                <form action="" method="post" enctype="multipart/form-data">
+                <h4 class="text-center">Update Scrap</h4>
+                {%csrf_token%}
+                {{form.as_p}}
+                <button class="btn btn-dark" type="submit">
+                    Submit
+                </button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
