--- a/scrapbox/templates/scrapboxitem_view.html
+++ b/scrapbox/templates/scrapboxitem_view.html
@@ -42,7 +42,7 @@
             <div class="card-body">
               <a href="{%url 'scrap-update' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>
 
-              <a href="#" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
+              <a href="{%url 'addto-cart' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
             
           </div>
         
