--- a/scrapbox/templates/login.html
+++ b/scrapbox/templates/login.html
@@ -32,16 +32,16 @@
     <nav class="navbar bg-dark border-bottom border-body text-light" data-bs-theme="dark">
         <p><h1>Driven Innovations</h1></p>
         <p>Welcome to Driven Innovations. Please login/signup to proceed</p>
-      </nav>
+    </nav>
     
 
     <div class="container d-flex justify-content-center text-center">
         
-        <div class="row ">
-          <div class="col-lg-8 mt-5">
-                <img src="{%static 'images/login2.jpg'%}" alt="" style="width: 60%; height: auto;">
+        <div class="row mt-2">
+          <div class="col-lg-6 mt-5">
+                <img src="{%static 'images/driven.png'%}" alt="" style="width: 60%; height: auto;">
           </div>
-          <div class="col-lg-4 mt-5 p-5">
+          <div class="col-lg-6 mt-3 p-5">
             <form action=""method="post">
                 <h3>Login Here </h3>
                 <div class="mt-3">
@@ -49,6 +49,7 @@
                     {{form.as_p}}
                 </div>
                 <button class="btn btn-primary ">Login</button>
+                <div class="mt-2">Create a new account? <a class="link" href="{%url 'register' %}">Sign-Up</a></div>
         </form>
           </div>
         </div>
