--- a/scrapbox/templates/scrapboxitem_view.html
+++ b/scrapbox/templates/scrapboxitem_view.html
@@ -10,12 +10,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-<body class="body">
+<body class="body"style="background-color:#D5F5E3 ">
   <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
     <div class="col-l-8  text-light  justify-content-center">
         <h4>  WELCOME..... {{request.user}}</h4>
      </div>
       <div class="d-flex justify-content-end">
+        <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-house"></i></a>
+
             <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
 
       </div>   
@@ -23,13 +25,13 @@
 
     <div class="container d-flex justify-content-center mt-5">
 
-        <div class="card" style="width: 28rem; height: auto;">
-              {%if data.picture%}
-                  <img src="{{data.picture.url}}">
-              {%endif%}
+        <div class="card" style="width: 25rem; height: auto;">
+          {%if data.picture%}
+              <img src="{{data.picture.url}}">
+          {%endif%}
             <!-- <img src="..." class="card-img-top" alt="..."> -->
             
-              <h5 class="title card-title">{{data.name}}</h5>
+              <h5 class="title card-title ms-2">{{data.name}}</h5>
               
             <ul class="list-group list-group-flush">
               <li class="list-group-item">{{data.price}}</li>
