--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -5,15 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <title>Document</title>
+    <link rel="stylesheet" href="{%static 'css/detailsbyid.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{%static 'css/liststyle.css' %}">
 </head>
-<body style="background-color: black;">
+<body style="background-color: #D5F5E3 ">
+<nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+        <div class="col-l-8  text-light  justify-content-center">
+            <h4 class="ms-3">  <i class="fa-solid fa-user"></i> {{request.user}}</h4>
+        </div>
+          <div class="d-flex justify-content-end">
+            <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-house"></i></a>
+
+            <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
     
+        </div>   
+</nav>     
     <div class="container">
-        <h3 class="mt-2 text-center text-light">Items available  for sale</h3>
-        <table class=" mt-4 table table-success border border-dark">
+        <h3 class="mt-2 text-center text-dark">Items available  for sale</h3>
+        <table class=" mt-4 table table-dark border border-dark ">
             <tr>
                 <th>Name</th>
                 <th>Category</th>
