--- a/scrapbox/templates/cartlist.html
+++ b/scrapbox/templates/cartlist.html
@@ -1,14 +1,60 @@
+
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="{%static 'css/detailsbyid.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-<body>
-    <form action=""method="">
-        {%csrf_token%}
-        {{data}}
-    </form>
+<body style="background-color: #D5F5E3 ">
+<nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+        <div class="col-l-8  text-light  justify-content-center">
+            <h4 class="ms-3">  <i class="fa-solid fa-user" data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{request.user}}"></i> {{request.user}}</h4>
+        </div>
+          <div class="d-flex justify-content-end">
+            <a href="{% url 'index' %}" class="btn btn-info border-dark bg-secondary text-light" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Go to Home">
+                <i class="fas fa-house"></i>
+              </a>
+              <a href="{%url 'signout'%}" class="btn btn-info border-dark bg-secondary text-light" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Log out">
+                <i class="fas fa-power-off"></i>
+              </a>
+      
+        </div>   
+</nav>     
+
+    <div class="container mt-3">
+        <h3>My Basket</h3>
+        <table class=" mt-4 table table-dark border border-dark ">
+
+        <ul>
+            {% if user_wishlist %}
+            
+                {% for item in user_wishlist.scrap.all %}
+                <tr>
+                    <td>{{item.name}}</td>
+                    
+                    <td>{{item.price}}</td>
+                    <td>{{item.location}}</td>
+                    <td>{{item.phone_no}}</td>
+                   <td>
+                    <a href="{%url 'itemview' item.id %}"><button class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="View details">View</button></a>
+
+                   </td>
+                   <!-- <td>
+                    <a href="{% url 'removecart' item.id %}"><button class="btn btn-secondary" data-bs-toggle="tooltip" data-bs-placement="bottom" title="View details">Remove from cart</button></a>
+                   </td>
+                  -->
+                    
+                </tr>
+                {% endfor %}
+            
+                
+            {% endif %}
+        </ul>
+    </div>
 </body>
+
 </html>
