--- a/scrapbox/templates/scrapboxitem_view.html
+++ b/scrapbox/templates/scrapboxitem_view.html
@@ -52,14 +52,14 @@
 
     <div class="container">
         <div class="card-container">
-            <div class="card" style="width: 300px; height: auto;">
+            <div class="card" style="width: 300px; margin-top: 150px;">
               {%if data.picture%}
                   <img src="{{data.picture.url}}">
               {%endif%}
             </div>
 
 
-            <div class="card">
+            <div class="card" style="margin-top: -350px; margin-left: 350px; width: fit-content;">
                 <!-- <img src="..." class="card-img-top" alt="..."> -->
 
                   <h5 class="title card-title ms-2">{{data.name}}</h5>
@@ -75,7 +75,7 @@
                 <div class="card-body">
                   <a href="{%url 'scrap-update' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>
 
-                  <a href="{%url 'addto-cart' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
+                  <a href="{%url 'addtocart' data.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-cart-plus"></i></button></a>
                 </div>
                  
 
