--- a/scrapbox/templates/register.html
+++ b/scrapbox/templates/register.html
@@ -3,70 +3,20 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="icon"  href="{% static 'social/images/logo.png' %}" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'social/css/style.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-     <script src="https://kit.fontawesome.com/45536f30e1.js" crossorigin="anonymous"></script>
-     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-
+    <title>Document</title>
 </head>
-<body style="    background-color: #FFDEE9;
-background-image: linear-gradient(0deg, #FFDEE9 0%, #B5FFFC 100%);">
-    <nav class="navbar bg-dark border-bottom border-body text-light" data-bs-theme="dark">
-        <p><h1>Driven Innovations</h1></p>
-        <p>Welcome to Driven Innovations. Please login/signup to proceed</p>
-    </nav>   
-   <div class=" master-container main container  d-flex justify-content-start  mt-5 mb-5"> 
-    <div class="col-lg-7 col-md-8 col-sm-12 ms-5 ">
-        <img src="{%static 'images/register1.jpeg' %}" alt="" style="width: 450px; height:100vh" class=" d-block w-100"> 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="{%static 'css/style.css'%}">
+<body>
+    <div class="container d-flex justify-content-center">
+        <form action="" method="post" enctype="multipart/form-data" class="w-50 border-info shadow p-5 mt-5">
+            <h3 class="text-center mb-3">Register Here</h3>
+                {%csrf_token%}
+                {{form.as_p}}
+                <button type="submit">Register</button>
+            </form>
     </div>
-    <div class="col-lg-5 col-md-4 col-sm-12 bg-white border rounded-3 me-5  shadow-lg" >
-       <div class="container ">
-        <div class="d-flex justify-content-center mt-5 ">
-        <h2 class="text-center fw-bolder fs-2 me-3"></h2>
-        <img src="{%static 'images/driven.png'%}" alt="" style="height: 100px;width: 150px; box-shadow: 1px 1px 12px 2px black;" >
-    </div>
-    {%if form.errors%}
-        {{form.errors}}
-    {%endif%}
-        <form action="" method="post" class="mt-5 ms-4 ">
-            {%csrf_token%}
-            <div class="mb-3">
-                <i class="fa-solid fa-user icon " style="color:#050505; "></i>
-                <input type="text" name="username" class="form-control input border rounded fw-bold" id="exampleInputEmail1" aria-describedby="emailHelp"placeholder="User_name" >
-            </div>
-           
-            <div class="mb-3">
-                <i class="fa-solid fa-envelope icon" style="color: #050505;"></i>
-                <input type="email" name="email" class="form-control input border rounded fw-bold" id="exampleInputEmail1" aria-describedby="emailHelp"placeholder="Email Name" >
-            </div>
-            <div class="mb-3">
-                <i class="fa-solid fa-lock icon" style="color: #050505;"></i>
-                <input type="password" name="password1" class="form-control input border rounded fw-bold" id="exampleInputEmail1" aria-describedby="emailHelp"placeholder="Password" >
-            </div>
-            <div class="mb-3">
-                <i class="fa-solid fa-lock icon" style="color: #050505;"></i>
-                <input type="password" name="password2" class="form-control input border rounded fw-bold" id="exampleInputEmail1" aria-describedby="emailHelp"placeholder="Confirm Password" >
-            </div>
-            <div>
-                
-            </div>
-            <div class="d-grid gap-2 col-6 mx-auto mt-3">
-                <button class="btn fw-bolder btn-warning " type="submit" >Register</button>
-            </div>
-        </form>
-        
-        <hr>
-      <div class="text-center">
-        <a href="{%url 'signin' %}">Already have an account</a>
-      </div>
-       </div>
-    </div>
-    
-  
-  
-    
 </body>
 </html>
