--- a/scrapbox/templates/scrapboxitem_view.html
+++ b/scrapbox/templates/scrapboxitem_view.html
@@ -41,7 +41,7 @@
           </div> -->
 
           <div class="col-l-6">
-            <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-success text-light">Home Page</a>
+            <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-success text-light">Home</a>
 
             <a href="{%url 'signout'%}" class="ms-auto btn btn-danger  text-light"  >Logout </a> 
 
