--- a/scrapbox/templates/register.html
+++ b/scrapbox/templates/register.html
@@ -1,6 +1,81 @@
 <!DOCTYPE html>
 {%load static%}
 <html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="icon"  href="{%static 'images/logo.jpg'%}" type="image/x-icon">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- <link rel="stylesheet" href="{%static 'css/style.css'%}"> -->
+    <title>
+        Scrap Box
+    </title>
+</head>
+<body class="vh-100" style="background-color: aquamarine;">
+  <div class="row" style="margin-left: 10%;">
+    <!-- <div class="col-lg-7 col-md-5 d-flex justify-content-center mt-3 p-6">
+      <img src="{%static 'images/side.png'%}" alt="" style="height: 600px; width: 90%">
+    </div> -->
+    <div class="col-lg-5 col-md-7 d-flex justify-content-center mt-5">
+      <div class="card p-3" style="width: 500px; margin-left: 30%;">
+        <div class="card-body" style="width: 100%;">
+          <h1 class="card-title fw-bold text-center">Sign-Up</h1>
+          <!-- <div class="d-flex justify-content-center mt-3">
+            <img src="{%static 'images/logopic.png'%}" alt="" style="height: 100px;width: 150px;">
+          </div> -->
+          <!-- =========== form starts =========== -->
+          {%if form.error%}
+          {{form.errors}}
+          {%endif%}
+          <form action="" method="post">
+            {%csrf_token%}
+            <div class="input-group mt-4">
+              <span class="input-group-text" id="basic-addon1">
+                <i class="fa-solid fa-user" style="color: #19a1d7;"></i>
+              </span>
+              <input type="text" name="username" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <div class="input-group mt-4">
+                <span class="input-group-text" id="basic-addon1">
+                  <i class="fa-solid fa-message" style="color: #19a1d7;"></i>
+                </span>
+                <input type="text" name="email" class="form-control" placeholder="Email" aria-label="Email" aria-describedby="basic-addon1">
+              </div>
+            <div class="input-group mt-4">
+              <span class="input-group-text" id="basic-addon1">
+                <i class="fa-solid fa-lock" style="color: #19a1d7;"></i>
+              </span>
+              <input type="password" name="password1" class="form-control" placeholder="Password" aria-label="Username" aria-describedby="basic-addon1">
+            </div>
+            <div class="input-group mt-4">
+                <span class="input-group-text" id="basic-addon1">
+                  <i class="fa-solid fa-lock" style="color: #19a1d7;"></i>
+                </span>
+                <input type="password" name="password2" class="form-control" placeholder="Confirm Password" aria-label="Username" aria-describedby="basic-addon1">
+              </div>
+            <div class="d-flex justify-content-center">
+              <button type="submit" class="btn btn-outline-primary rounded-pill mt-4">Register</button>
+            </div>
+          </form>
+          <!-- =========== form ends =========== -->
+            <hr>
+            <div class="text-center mb-3">
+              Already have an account? <a class="link" href="{%url 'signin'%}">Log-in</a>
+            </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
+{%load static%}
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,4 +94,4 @@
             </form>
     </div>
 </body>
-</html>
+</html> -->
