--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -12,20 +12,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
 <body style="background-color: #D5F5E3 ">
-<nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="white">
+<nav class="navbar p-2 text-dark  border-bottom border-body text-dark text-start  " style="background-color: rgba(70, 169, 222, 0.714);" data-bs-theme="white">
         <div class="col-l-8  text-light  justify-content-center">
             <h4 class="ms-3">  <i class="fa-solid fa-user"></i> {{request.user}}</h4>
         </div>
           <div class="d-flex justify-content-end">
-            <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-house"></i></a>
-
-            <a href="{%url 'signout'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"  ><i class="fa-solid fa-power-off"></i> </a> 
+            <a href="{%url 'index'  %}" class="btn btn-info border-dark bg-success text-light">Home</a> &nbsp;<br>
+            <a href="{%url 'signout'%}" class="ms-auto btn btn-warning border-dark bg-danger text-light" >Logout</a> 
     
         </div>   
 </nav>     
     <div class="container">
-        <h3 class="mt-2 text-center text-dark">Items available  for sale</h3>
-        <table class=" mt-4 table table-dark border border-dark ">
+        <h3 class="mt-2 text-center">Items available  for sale</h3>
+        <table class=" mt-4 table table-info table-border-rounded">
             <tr>
                 <th>Name</th>
                 <th>Category</th>
