--- a/scrapbox/templates/index.html
+++ b/scrapbox/templates/index.html
@@ -35,6 +35,12 @@
                    <a href="#" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
 
               </div> -->
+              <div>
+              <form action=""method="post">
+                <a href="{%url 'cartlist-view'%}" class="ms-auto btn btn-info border-dark bg-secondary text-light"data-bs-toggle="tooltip" data-bs-placement="bottom" title="My cart"><i class="fa-solid fa-cart-shopping"></i></a> </div>
+
+              </form>
+            </div>
 
               <div class="col-l-6">
                 <a href="{%url 'signout'%}" class="ms-auto btn btn-danger  text-light"  >Logout </a> 
@@ -87,7 +93,7 @@
       <ul class="no-bullets">
         <li><i class="fa-solid fa-envelope ms-2 p-2"></i>help.in@maxfashion.com</li>
         <li><i class="fa-solid fa-phone ms-2 p-2"></i>1800-123-1444(toll-free), +918086170222</li>
-        <li><i class="fa-solid fa-location-dot ms-2 p-2"></i><a href="https://maps.app.goo.gl/8UXGc28YEJiShre16">View in Map</li> <br>
+        <li><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d3928.9822717501906!2d76.33998887534976!3d10.018321290088021!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1707924802142!5m2!1sen!2sin" width="500" height="200" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>View in Map</li> <br>
 
         
       </ul>
