--- a/scrapbox/templates/register.html
+++ b/scrapbox/templates/register.html
@@ -13,14 +13,14 @@
         Scrap Box
     </title>
 </head>
-<body class="vh-100" style="background-color: aquamarine;">
+<body class="vh-100" style="background-image: url(../static/images/8270301.jpg); height: fit-content; width: auto;">
   <div class="row" style="margin-left: 10%;">
     <!-- <div class="col-lg-7 col-md-5 d-flex justify-content-center mt-3 p-6">
       <img src="{%static 'images/side.png'%}" alt="" style="height: 600px; width: 90%">
     </div> -->
     <div class="col-lg-5 col-md-7 d-flex justify-content-center mt-5">
-      <div class="card p-3" style="width: 500px; margin-left: 30%;">
-        <div class="card-body" style="width: 100%;">
+      <div class="card p-5" style="width: 900px; margin-right: 25%;">
+        <div class="card-body" >
           <h1 class="card-title fw-bold text-center">Sign-Up</h1>
           <!-- <div class="d-flex justify-content-center mt-3">
             <img src="{%static 'images/logopic.png'%}" alt="" style="height: 100px;width: 150px;">
