--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -37,7 +37,7 @@
             <tr>
                 <td>{{d.name}}</td>
                 <td>{{d.category}}</td>
-                <td>{{d.price}}</td>
+                <td>Rs.{{d.price}}/-</td>
                 <td>{{d.location}}</td>
                 <td>{{d.phone_no}}</td>
                 <td>
