--- a/scrapbox/templates/cartlist.html
+++ b/scrapbox/templates/cartlist.html
@@ -4,13 +4,13 @@
 <html lang="en">
 <head>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="{%static 'css/detailsbyid.css' %}">
+    <link rel="stylesheet" href="../static/css/cartliststyle.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </head>
-<body style="background-color: #D5F5E3 ">
-<nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
+<body>
+    <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
         <div class="col-l-8  text-light  justify-content-center">
             <h4 class="ms-3">  <i class="fa-solid fa-user" data-bs-toggle="tooltip" data-bs-placement="bottom" title="{{request.user}}"></i> {{request.user}}</h4>
         </div>
@@ -27,7 +27,7 @@
 
     <div class="container mt-3">
         <h3>My Basket</h3>
-        <table class=" mt-4 table table-dark border border-dark ">
+        <table class=" mt-4 table-info table  ">
 
         <ul>
             {% if user_wishlist %}
@@ -36,7 +36,7 @@
                 <tr>
                     <td>{{item.name}}</td>
                     
-                    <td>{{item.price}}</td>
+                    <td>Rs.{{item.price}}/-</td>
                     <td>{{item.location}}</td>
                     <td>{{item.phone_no}}</td>
                    <td>
