--- a/scrapbox/templates/profile_detail.html
+++ b/scrapbox/templates/profile_detail.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{%static 'css/updatescrap.css' %}">
+    <link rel="stylesheet" href="../static/css/profile.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </head>
-<body>
+<body style="background-color: blueviolet;">
 <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
         <div class="col-l-8  text-light  justify-content-center">
             <h4>  WELCOME..... {{request.user}}</h4>
@@ -24,6 +24,17 @@
         </div>  
 
 </nav> 
+<div class="cart col-l-6">
+    <!-- <div>
+          <a href="#"><button class="btn btn-secondary"><i class="fa-solid fa-user"></i></button></a>
+          <a href="#" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
 
+     </div> -->
+     <div>
+     <form action=""method="post">
+       <a href="{%url 'cartlist-view'%}" class="mt-5 ms-auto btn btn-info border-dark bg-secondary text-light"data-bs-toggle="tooltip" data-bs-placement="bottom" title="My cart"><i class="fa-solid fa-cart-shopping"></i> VIEW MY CART</a> </div>
+
+     </form>
+   </div>
 </body>
 </html>
