--- a/scrapbox/templates/profile_detail.html
+++ b/scrapbox/templates/profile_detail.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
 </head>
-<body style="background-color: blueviolet;">
+<body style="background-color: rgb(103, 90, 115);">
 <nav class="navbar bg-dark p-2 text-dark  border-bottom border-body text-dark text-start  " data-bs-theme="dark">
         <div class="col-l-8  text-light  justify-content-center">
             <h4>  WELCOME..... {{request.user}}</h4>
@@ -30,7 +30,7 @@
           <a href="#" class="ms-auto btn btn-info border-dark bg-secondary text-light"><i class="fa-solid fa-cart-shopping"></i></a> </div>
 
      </div> -->
-     <div>
+     <div class="d-flex justify-content-center">
      <form action=""method="post">
        <a href="{%url 'cartlist-view'%}" class="mt-5 ms-auto btn btn-info border-dark bg-secondary text-light"data-bs-toggle="tooltip" data-bs-placement="bottom" title="My cart"><i class="fa-solid fa-cart-shopping"></i> VIEW MY CART</a> </div>
 
