--- a/scrapbox/static/css/detailsbyid.css
+++ b/scrapbox/static/css/detailsbyid.css
@@ -6,9 +6,7 @@
   }
   
   .card {
-    width: 300px;
-    height: 200px;
-    border: 1px solid black;
-    padding: 10px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
   }
   
