--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <title>Document</title>
-    <link rel="stylesheet" href="{%static 'css/detailsbyid.css' %}">
+    <link rel="stylesheet" href="../static/css/detailsbyid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -23,32 +23,32 @@
         </div>   
 </nav>     
     <div class="container">
-        <h3 class="mt-2 text-center">Items available  for sale</h3>
-        <table class=" mt-4 table table-info table-border-rounded">
-            <tr>
-                <th>Name</th>
-                <th>Category</th>
-                <th>Price</th>
-                <th>Location</th>
-                <th>Contact</th>
-                <th>Remarks</th>
-            </tr>
-            {%for d in data%}
-            <tr>
-                <td>{{d.name}}</td>
-                <td>{{d.category}}</td>
-                <td>Rs.{{d.price}}/-</td>
-                <td>{{d.location}}</td>
-                <td>{{d.phone_no}}</td>
-                <td>
-                    <a href="{%url 'itemview' d.id %}"><button class="btn btn-secondary">View</button></a>
-
+        
+        {% for product in data %}
+            <div class="card mb-3 mt-3" id={{product.id}} style="
+                width: 500px;
+                display: grid;
+                grid-template-columns: repeat(3, 1fr);">
+                <img class="card-img-top" src="{{product.picture.url}}" alt="img" style="width: auto; height: 200px;">
+                <div class="card-body">
+                    <p class="card-title">{{product.name}}</p>
+                    <p class="card-title"><i class="fa-solid fa-list" style="color: #06b711;"></i>  {{product.category}}</p>
+                    <p class="card-title"><i class="fa-solid fa-indian-rupee-sign" style="color: #0ea427;"></i>  Rs.{{product.price}}/-</p>
+                    <p class="card-title"><i class="fa-solid fa-location-dot" style="color: #0ea427;"></i>    {{product.location}}</p>
+                    <p class="card-title">Contact:{{product.phone_no}}</p>
                     
-                </td>
-                
-            </tr>
-            {%endfor%}
-        </table>
+                </div>
+              <!-- <a href="{%url 'scrap-update' product.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>  -->
+              &nbsp;
+              <a class="d-flex justify-content-evenly" href="{%url 'itemview' product.id %}"><button class="btn btn-secondary">View</button></a>
+              <form action="{% url 'addtocart' product.id %}" method="post" data-bs-toggle="tooltip" data-bs-placement="bottom">
+                {% csrf_token %}
+                <button class="btn btn-outline-primary d-flex justify-content-evenly" type="submit" name="action" value="addtocart">
+                  <i class="fa-solid fa-cart-shopping"></i>
+                </button>
+              </form>
+            </div>
+      {%endfor%}
     </div>
 </body>
 </html>
