--- a/scrapbox/templates/cartlist.html
+++ b/scrapbox/templates/cartlist.html
@@ -70,7 +70,7 @@
                         </div>
                         <div class="button-container mb-3">
                          &nbsp; &nbsp;<a href="{%url 'itemview' product.id %}"><button class="btn btn-secondary">View</button></a>
-                        <a href="{% url 'removecart' product.id %}"><button class="btn btn-success">Remove From Cart</button></a>
+                        <!-- <a href="{% url 'removecart' product.id %}"><button class="btn btn-success">Remove From Cart</button></a> -->
                         </div>
                     </div>
                 {%endfor%}
