--- a/scrapbox/templates/scrapboxlist.html
+++ b/scrapbox/templates/scrapboxlist.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <title>Document</title>
-    <link rel="stylesheet" href="../static/css/detailsbyid.css">
+    <!-- <link rel="stylesheet" href="../static/css/style.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -38,15 +38,15 @@
                     <p class="card-title">Contact:{{product.phone_no}}</p>
                     
                 </div>
-              <!-- <a href="{%url 'scrap-update' product.id %}" class="card-link"><button  class="btn btn-secondary"><i class="fa-solid fa-pencil"></i></button></a>  -->
-              &nbsp;
-              <a class="d-flex justify-content-evenly" href="{%url 'itemview' product.id %}"><button class="btn btn-secondary">View</button></a>
+                &nbsp;
+              <a class="d-flex justify-content-center" href="{%url 'itemview' product.id %}"><button class="btn btn-secondary">View</button></a>
               <form action="{% url 'addtocart' product.id %}" method="post" data-bs-toggle="tooltip" data-bs-placement="bottom">
                 {% csrf_token %}
                 <button class="btn btn-outline-primary d-flex justify-content-evenly" type="submit" name="action" value="addtocart">
                   <i class="fa-solid fa-cart-shopping"></i>
                 </button>
               </form>
+              <a class="d-flex justify-content-evenly" href="{%url 'shipping' product.id%}"><button class="btn btn-secondary">Buy Now</button></a>
             </div>
       {%endfor%}
     </div>
